@@ -184,6 +184,7 @@ $conf->domains[$i]->quota_type='STORAGE';
 //  5 = Size
 //  6 = Read/Unread
 //  7 = Attachment
+//  8 = Priority
 $conf->column_order = array('6', '1', '7', '2', '3', '4', '5');
 
 // Master key for session password encryption. Longer is better.
