@@ -93,6 +93,8 @@ if ($pop->is_imap()) {
                                     case '5': $column_title = $html_size; break;
                                     case '6': $column_title = ''; break;
                                     case '7': $column_title = ''; break;
+                                    //TODO: Make "Priority" column sortable!
+                                    case '8': $column_title = ''; break;
                                 }
                                 echo '<th class="column'.$column; if ($_SESSION['nocc_sort'] == $column) echo ' sorted'; echo '">';
                                 if ($column_title != '') { //If we have a column title...
@@ -102,6 +104,11 @@ if ($pop->is_imap()) {
                                         echo '<a href="'.$_SERVER['PHP_SELF'].'?sort='.$column.'&amp;sortdir='.$new_sortdir.'">';
                                         echo '  <img src="themes/'.$_SESSION['nocc_theme'].'/img/'.$arrow.'.png" class="sort" alt="'.$html_sort.'" title="'.$html_sort_by.' '.$column_title.'" />';
                                         echo '</a>';
+                                    }
+                                }
+                                else { //If we NOT have a column title...
+                                    if ($column == '8') { //If "Priority" column...
+                                        echo $html_priority;
                                     }
                                 }
                                 echo '</th>';
